# medium

./: .gitignore  README.md
compareOSforDL/: Initial_draft.docx  README.md
compareOSforDL/images/: asl_youngtime
quizIt/: README.md
quizIt/app/: QuizIt.py  app.py  dataprep.py  vocab_reduced.xlsm
streamlit_app/: pyproject.toml
streamlit_app/.streamlit/: config.toml
streamlit_app/advanced-app/: app.py  utils.py
streamlit_app/assets/: animation-style.css  style.css
streamlit_app/basic-app/: app.py
