[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Vicky Parmar <parmar.vickyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <4.0"
streamlit = "^1.37.1"
streamlit-extras = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
